SONARHTML-164 Update and remove unneeded dependencies (#228)